# goph420-w2024-lab03-stEG

./: README.md  pyproject.toml
examples/: driver.py
src/goph420_lab03/: regression.py
